# extract-text-from-images

./: README.md  pyproject.toml
extract_text_from_images/: api.py  cli.py
