[tool.poetry]
name = "extract-text-from-images"
version = "0.1.0"
description = ""
authors = ["Morné Chamberlain <mail@mornechamberlain.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "extract_text_from_images"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
